Fixed the dynamic and static dropdown layout issues, pulled out a bunch of inline code

--- a/public/css/less/rt/components/buttons.less
+++ b/public/css/less/rt/components/buttons.less
@@ -105,6 +105,13 @@
 
 .neutralTextCTA {
   .ButtonCTA(transparent, transparent, #777, #999);
+
+  &:hover,
+  &:active {
+    border: transparent;
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
 
 
